--- a/package.json
+++ b/package.json
@@ -5,23 +5,30 @@
     "pdf-generator": "bin/pdf-generator.js"
   },
   "scripts": {
+    "bootstrap": "cdk bootstrap --require-approval never --verbose",
     "build": "tsc",
+    "deploy": "cdk deploy --require-approval never --verbose",
     "watch": "tsc -w",
     "test": "jest",
     "cdk": "cdk"
   },
   "devDependencies": {
+    "@types/aws-lambda": "^8.10.110",
+    "@types/express": "^4.17.16",
     "@types/jest": "^29.2.5",
     "@types/node": "18.11.18",
+    "aws-cdk": "2.62.1",
+    "aws-lambda": "^1.0.7",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
-    "aws-cdk": "2.62.1",
     "ts-node": "^10.9.1",
     "typescript": "~4.9.4"
   },
   "dependencies": {
     "aws-cdk-lib": "2.62.1",
     "constructs": "^10.0.0",
+    "express": "^4.18.2",
+    "serverless-http": "^3.1.1",
     "source-map-support": "^0.5.21"
   }
 }
